--- a/server-staycation/views/admin/bank/edit_modal.ejs
+++ b/server-staycation/views/admin/bank/edit_modal.ejs
@@ -35,6 +35,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
+					<input type="hidden" class="id" name="id">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 					<button type="submit" class="btn btn-primary">Add</button>
 				</div>
