--- a/server-staycation/views/admin/bank/table_bank.ejs
+++ b/server-staycation/views/admin/bank/table_bank.ejs
@@ -31,7 +31,7 @@
 						<td><%= bank[i].accountNumber %></td>
 						<td><%= bank[i].accountName %></td>
 						<td>
-							<img src="http://localhost:3000/<%= bank[i].imageUrl %>" alt="imageUrl" height="70px" width="70px">
+							<img src="http://localhost:3000/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px">
 						</td>
 						<td>
 							<form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
