--- a/server-staycation/views/admin/item/view_item.ejs
+++ b/server-staycation/views/admin/item/view_item.ejs
@@ -11,6 +11,7 @@
 
 			<!-- Begin Page Content -->
 			<div class="container-fluid">
+				<%- include('../../partials/message.ejs') %>
 				<!-- Page Heading -->
 				<h1 class="h3 mb-4 text-gray-800">Items</h1>
 				<!-- End Heading-->
@@ -80,7 +81,7 @@
 	</div>
 </div>
 
-<%- include('../../partials/js.ejs') -%>
+<%- include('../../partials/js.ejs') %>
 <script>
 	CKEDITOR.replace( 'about' );
 </script>
