--- a/server-staycation/views/admin/item/show_table_item.ejs
+++ b/server-staycation/views/admin/item/show_table_item.ejs
@@ -30,7 +30,7 @@
 						<td><%= item[i].city %></td>
 						<td>
 							<form action="/admin/item/<%= item[i].id %>?_method=DELETE" method="POST">
-								<a href="#" class="btn btn-info btn-circle btn-sm"><i class="fas fa-image"></i></a>
+								<a href="/admin/item/show-image/<%= item[i].id %>" class="btn btn-info btn-circle btn-sm"><i class="fas fa-image"></i></a>
 								<a
 									href="javascript:void()"
 									type="button"
