success show item by single id

--- a/server-staycation/views/admin/item/view_item.ejs
+++ b/server-staycation/views/admin/item/view_item.ejs
@@ -33,12 +33,20 @@
 				<% } else if(action == 'show image') { %>
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
-						  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#show-image" role="tab" aria-controls="home" aria-selected="true">Show Image</a>
-						  
+						  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#show-image" role="tab" aria-controls="home" aria-selected="true">Show Image</a>		  
 						</li>
 					  </ul>
 					  <div class="tab-content" id="myTabContent">
 						<%- include('show_image_item.ejs') %>
+					</div>
+				<% } else { %>
+					<ul class="nav nav-tabs" id="myTab" role="tablist">
+						<li class="nav-item">
+						  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#edit-item" role="tab" aria-controls="home" aria-selected="true">Edit Item</a>		  
+						</li>
+					  </ul>
+					  <div class="tab-content" id="myTabContent">
+						<%- include('edit_item.ejs') %>
 					</div>
 				<% } %>
 
