--- a/server-staycation/views/admin/item/detail_item/show_feature.ejs
+++ b/server-staycation/views/admin/item/detail_item/show_feature.ejs
@@ -5,7 +5,7 @@
 	<div class="card-body">
         <div class="row">
             <div class="col-md-5">
-                <form action="/admin/bank" method="POST" enctype="multipart/form-data">
+                <form action="/admin/item/add/feature" method="POST" enctype="multipart/form-data">
 					<div class="form-group">
 						<label for="name">Name</label>
 						<input type="text" class="form-control"  name="name" placeholder="Enter Name" required />
@@ -17,7 +17,8 @@
 					<div class="form-group">
 						<label for="name">Image Url</label>
 						<input type="file" class="form-control" name="image" required />
-					</div>
+                    </div>
+                    <input type="hidden" value="<%= itemId %>" name="itemId">
 					<button type="submit" class="btn btn-primary">Save</button>
 			</form>
             </div>
@@ -35,11 +36,37 @@
                                 <th>No</th>
                                 <th>Name</th>
                                 <th>QTY</th>
-                                <th>Image Url</th>
+                                <th>Image</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            
+                            <% for(let i = 0; i < feature.length; i++){ %>
+                            <tr>
+                                <td><%= i + 1 %></td>
+                                <td><%= feature[i].name %></td>
+                                <td><%= feature[i].qty %></td>
+                                <td>
+                                    <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl" width="70px">
+                                </td>
+                                <td>
+                                    <form action="/admin/feature/<%= feature[i].id %>?_method=DELETE" method="POST">
+                                        <a
+                                            href="javascript:void()"
+                                            type="button"
+                                            class="btn btn-warning btn-circle btn-sm button-update"
+                                            data-id="<%= feature[i].id %>"
+                                            data-name="<%= feature[i].name %>"
+                                            data-qty="<%= feature[i].qty %>"
+                                            ><i class="fas fa-edit"></i>
+                                        </a>
+                                        <button type="submit" class="btn btn-danger btn-circle btn-sm">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    </form>
+                                </td>
+                            </tr>
+                            <% } %>
                         </tbody>
                     </table>
                 </div>
