--- a/server-staycation/views/admin/item/detail_item/show_feature.ejs
+++ b/server-staycation/views/admin/item/detail_item/show_feature.ejs
@@ -50,7 +50,7 @@
                                     <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl" width="70px">
                                 </td>
                                 <td>
-                                    <form action="/admin/feature/<%= feature[i].id %>?_method=DELETE" method="POST">
+                                    <form action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE" method="POST">
                                         <a
                                             href="javascript:void()"
                                             type="button"
