--- a/server-staycation/views/admin/booking/table_booking.ejs
+++ b/server-staycation/views/admin/booking/table_booking.ejs
@@ -32,7 +32,7 @@
 						<td><%= booking[i].bankId.bankName %></td>
 						<td><%= booking[i].payments.status %></td>
 						
-						<td>	<a href="#"
+						<td>	<a href="/admin/booking/<%= booking[i].id %>"
 									class="btn btn-success btn-circle btn-sm button-update">
 									<i class="fas fa-eye"></i>
 								</a>
